--- a/index8.html
+++ b/index8.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UI Design Section</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="https://www.oneclickitsolution.com/blog/why-ui-design-is-important-for-website"
 </head>
 <body>
   <section class="hero">
